编码再修复

--- a/data/BD/r+_BD_3.03w.html
+++ b/data/BD/r+_BD_3.03w.html
@@ -1,11 +1,11 @@
-<html xmlns:v="urn:schemas-microsoft-com:vml"
+ï»¿<html xmlns:v="urn:schemas-microsoft-com:vml"
 xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
 <meta name="Excel Workbook Frameset">
-<meta http-equiv=Content-Type content="text/html; charset=gb2312">
+<meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link rel=File-List href="r+_BD_3.03w.files/filelist.xml">
@@ -26,14 +26,14 @@ xmlns="http://www.w3.org/TR/REC-html40">
  var c_lTabs=8;
 
  var c_rgszSh=new Array(c_lTabs);
- c_rgszSh[0] = "ÊµÑéÊı¾İ";
- c_rgszSh[1] = "¸ÅÂÊÍ³¼Æ";
- c_rgszSh[2] = "¾ùÖµÆ«²î(%)·½²î";
- c_rgszSh[3] = "ÃÅ¸ÅÂÊÍ¼";
- c_rgszSh[4] = "·½ÏòÍ¼";
- c_rgszSh[5] = "ÖÃĞÅÇø¼äÑéÖ¤";
- c_rgszSh[6] = "½áÂÛ-ÃÅ";
- c_rgszSh[7] = "½áÂÛ-·½Ïò";
+ c_rgszSh[0] = "ç€¹ç‚ºç™éç‰ˆåµ";
+ c_rgszSh[1] = "å§’å‚œå·¼ç¼ç†»î…¸";
+ c_rgszSh[2] = "é§å›§â‚¬ç…äº¸å®¸?%)é‚ç‘°æ¨Š";
+ c_rgszSh[3] = "é—‚ã„¦î›§éœå›§æµ˜";
+ c_rgszSh[4] = "é‚ç‘°æ‚œé¥?;
+ c_rgszSh[5] = "ç¼ƒî†»ä¿Šé–æ´ªæ£¿æ¥ å²ƒç˜‰";
+ c_rgszSh[6] = "ç¼æ’¹î†‘-é—‚?;
+ c_rgszSh[7] = "ç¼æ’¹î†‘-é‚ç‘°æ‚œ";
 
 
 
@@ -101,7 +101,7 @@ function fnBuildTabStrip()
  szHTML =
   "<html><head>"+
   "<style>A:link,A:visited,A:active {text-decoration:none;"+"color:"+c_rgszClr[3]+";}"+
-  ".clTab {cursor:hand;background:"+c_rgszClr[1]+";font:9pt ËÎÌå;padding-left:3px;padding-right:3px;text-align:center;}"+
+  ".clTab {cursor:hand;background:"+c_rgszClr[1]+";font:9pt ç€¹å¬©ç¶‹;padding-left:3px;padding-right:3px;text-align:center;}"+
   ".clBorder {background:"+c_rgszClr[2]+";font:1pt;}"+
   "</style></head><body onload=\"parent.fnInit();\" onselectstart=\"event.returnValue=false;\" ondragstart=\"event.returnValue=false;\" bgcolor="+c_rgszClr[4]+
   " topmargin=0 leftmargin=0><table id=tbTabs cellpadding=0 cellspacing=0>";
@@ -311,35 +311,35 @@ function fnSetActiveSheet(iSh)
  <x:ExcelWorkbook>
   <x:ExcelWorksheets>
    <x:ExcelWorksheet>
-    <x:Name>ÊµÑéÊı¾İ</x:Name>
+    <x:Name>ç€¹ç‚ºç™éç‰ˆåµ</x:Name>
     <x:WorksheetSource HRef="r+_BD_3.03w.files/sheet001.html"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>¸ÅÂÊÍ³¼Æ</x:Name>
+    <x:Name>å§’å‚œå·¼ç¼ç†»î…¸</x:Name>
     <x:WorksheetSource HRef="r+_BD_3.03w.files/sheet002.html"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>¾ùÖµÆ«²î(%)·½²î</x:Name>
+    <x:Name>é§å›§â‚¬ç…äº¸å®¸?%)é‚ç‘°æ¨Š</x:Name>
     <x:WorksheetSource HRef="r+_BD_3.03w.files/sheet003.html"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>ÃÅ¸ÅÂÊÍ¼</x:Name>
+    <x:Name>é—‚ã„¦î›§éœå›§æµ˜</x:Name>
     <x:WorksheetSource HRef="r+_BD_3.03w.files/sheet004.html"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>·½ÏòÍ¼</x:Name>
+    <x:Name>é‚ç‘°æ‚œé¥?/x:Name>
     <x:WorksheetSource HRef="r+_BD_3.03w.files/sheet005.html"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>ÖÃĞÅÇø¼äÑéÖ¤</x:Name>
+    <x:Name>ç¼ƒî†»ä¿Šé–æ´ªæ£¿æ¥ å²ƒç˜‰</x:Name>
     <x:WorksheetSource HRef="r+_BD_3.03w.files/sheet006.html"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>½áÂÛ-ÃÅ</x:Name>
+    <x:Name>ç¼æ’¹î†‘-é—‚?/x:Name>
     <x:WorksheetSource HRef="r+_BD_3.03w.files/sheet007.html"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>½áÂÛ-·½Ïò</x:Name>
+    <x:Name>ç¼æ’¹î†‘-é‚ç‘°æ‚œ</x:Name>
     <x:WorksheetSource HRef="r+_BD_3.03w.files/sheet008.html"/>
    </x:ExcelWorksheet>
   </x:ExcelWorksheets>
@@ -359,7 +359,7 @@ function fnSetActiveSheet(iSh)
  <frame src="r+_BD_3.03w.files/tabstrip.html" name="frTabs" marginwidth=0 marginheight=0>
  <noframes>
   <body>
-   <p>´ËÒ³ÃæÊ¹ÓÃÁË¿ò¼Ü£¬¶øÄúµÄä¯ÀÀÆ÷²»Ö§³Ö¿ò¼Ü¡£</p>
+   <p>å§ã‚‰ã€‰é—ˆî­å¨‡é¢ã„¤ç°¡å¦—å—˜ç¦é”›å²ƒâ‚¬å±¾åé¨å‹¬ç¥»ç‘™å æ«’æ¶“å¶†æ•®é¸ä½¹î”‹é‹èº²â‚¬?/p>
   </body>
  </noframes>
 </frameset>
